Add BackOff to Context for retrying nodes that could not get restarted Support remaining logs and segments in BrokerState for logging Use consistent nodeRef in logs
Signed-off-by: Gantigmaa Selenge <tina.selenge@gmail.com>